# my_fastlio2

./: CMakeLists.txt  package.xml
include/my_fastlio2/data_types/: base_type.h  imu.h  measure_ground.h  point.h  pointcloud.h  pose.h  timestamp.h
include/my_fastlio2/math/: math.hpp
include/my_fastlio2/modules/: base_module.h  frontend.h  map_manager.h  state_manager.h
include/wrapper/: avia_process.h  frontend_wrapper.h
launch/: avia.launch
src/app/: my_fastlio2.cpp
src/my_fastlio2/modules/: frontend.cpp  map_manager.cpp  state_manager.cpp
src/wrapper/: frontend_wrapper.cpp
